consfigurator (0.4.0-1) UNRELEASED; urgency=medium

  * Add deps and build-deps on cl-heredoc and cl-named-readtables.

 -- Sean Whitton <spwhitton@spwhitton.name>  Sat, 20 Mar 2021 12:31:53 -0700

consfigurator (0.3.1-1) experimental; urgency=medium

  * New upstream release.

 -- Sean Whitton <spwhitton@spwhitton.name>  Wed, 10 Mar 2021 12:58:59 -0700

consfigurator (0.3.0-1) experimental; urgency=medium

  * New upstream release.
  * Install consfigurator.el using dh_elpa
    - Add build-deps on dh-elpa, each cl-* package used by Consfigurator, sbcl
    - Depend on emacsen-common and Recommend emacs
    - Add Provides: elpa-consfigurator.

 -- Sean Whitton <spwhitton@spwhitton.name>  Wed, 10 Mar 2021 12:42:30 -0700

consfigurator (0.2.1-1) experimental; urgency=medium

  * New upstream release.
  * Update Homepage.
  * Add trailing slashes to Vcs-Git and Vcs-Browser.

 -- Sean Whitton <spwhitton@spwhitton.name>  Tue, 02 Mar 2021 19:02:08 -0700

consfigurator (0.2.0-1) experimental; urgency=medium

  * New upstream release.
  * Add dependencies on cl-babel, cl-cffi.
  * Add an autopkgtest, marked as superficial, to test compiling and loading.
  * Add "Provides: consfigurator".
  * Move ${sphinxdoc:Depends} Depends->Recommends to ease installing on stable.
  * wrap-and-sort -abst

 -- Sean Whitton <spwhitton@spwhitton.name>  Tue, 02 Mar 2021 18:08:45 -0700

consfigurator (0.0.1-1) experimental; urgency=medium

  * Initial release.

 -- Sean Whitton <spwhitton@spwhitton.name>  Wed, 24 Feb 2021 19:42:21 -0700