@@ -10,6 +10,7 @@ Build-Depends:
  cl-interpol,
  cl-named-readtables,
  cl-ppcre,
+ cl-trivial-backtrace,
  cl-trivial-macroexpand-all,
  debhelper-compat (= 13),
  dh-elpa,
@@ -33,6 +34,7 @@ Depends:
  cl-interpol,
  cl-named-readtables,
  cl-ppcre,
+ cl-trivial-backtrace,
  cl-trivial-macroexpand-all,
  emacsen-common,
  ${misc:Depends},
